force-app/main/default/objects/airline_upgrade__c/airline_upgrade__c.object-meta.xml
<CustomObject>
    <label>airline upgrade</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>airline upgrade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>