force-app/main/default/objects/airline_upgrade__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to take options on or off the web checked is on</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>