force-app/main/default/objects/airline_upgrade__c/fields/Addon_Choice_Label__c.field-meta.xml
<CustomField>
    <fullName>Addon_Choice_Label__c</fullName>
    <formula>Name &amp;&quot; - AU$ &quot;&amp; TEXT(price__c) &amp;&quot; - NZ$ &quot;&amp; TEXT(price_nz__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addon Choice Label</label>
    <type>Text</type>
</CustomField>