force-app/main/default/objects/airline_upgrade__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <label>Airline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerolineas Argentinas</fullName>
            </value>
            <value>
                <fullName>Air Canada</fullName>
            </value>
            <value>
                <fullName>Air New Zealand</fullName>
            </value>
            <value>
                <fullName>All Nippon Airways</fullName>
            </value>
            <value>
                <fullName>American Airlines</fullName>
            </value>
            <value>
                <fullName>British Airways</fullName>
            </value>
            <value>
                <fullName>Cathay Pacific</fullName>
            </value>
            <value>
                <fullName>China Southern or China Airlines</fullName>
            </value>
            <value>
                <fullName>Delta Airlines</fullName>
            </value>
            <value>
                <fullName>Emirates</fullName>
            </value>
            <value>
                <fullName>Etihad</fullName>
            </value>
            <value>
                <fullName>Hawaiian Airlines</fullName>
            </value>
            <value>
                <fullName>Iberia</fullName>
            </value>
            <value>
                <fullName>Japan Airlines</fullName>
            </value>
            <value>
                <fullName>Korean Air</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Lufthansa</fullName>
            </value>
            <value>
                <fullName>Lufthansa/Swiss Airlines</fullName>
            </value>
            <value>
                <fullName>Malaysia Airlines</fullName>
            </value>
            <value>
                <fullName>Oman Air</fullName>
            </value>
            <value>
                <fullName>OneWorld</fullName>
            </value>
            <value>
                <fullName>Other Airline</fullName>
            </value>
            <value>
                <fullName>Premium Carrier(Either Singapore Airlines, Cathay Pacific, Emirates or Qantas)</fullName>
            </value>
            <value>
                <fullName>Qantas</fullName>
            </value>
            <value>
                <fullName>Qatar Airways</fullName>
            </value>
            <value>
                <fullName>Singapore Airlines</fullName>
            </value>
            <value>
                <fullName>Sri Lankan Airlines</fullName>
            </value>
            <value>
                <fullName>Star Alliance</fullName>
            </value>
            <value>
                <fullName>Swiss Airlines</fullName>
            </value>
            <value>
                <fullName>Turkish Airlines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>