force-app/main/default/objects/airline_upgrade__c/fields/Cabin__c.field-meta.xml
<CustomField>
    <fullName>Cabin__c</fullName>
    <label>Cabin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Premium Economy</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>