force-app/main/default/objects/airline_upgrade__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>airline upgrade</relationshipLabel>
    <relationshipName>airline_upgrade</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>