force-app/main/default/objects/airline_upgrade__c/fields/Flight_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Flight_Price_Type__c</fullName>
    <label>Flight Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy Now</fullName>
            </value>
            <value>
                <fullName>Starting From</fullName>
                <isActive>false</isActive>
                <label>Starting From</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>