force-app/main/default/objects/airline_upgrade__c/fields/order_filter__c.field-meta.xml
<CustomField>
    <fullName>order_filter__c</fullName>
    <label>Order Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>