force-app/main/default/objects/airline_upgrade__c/fields/price_nz__c.field-meta.xml
<CustomField>
    <fullName>price_nz__c</fullName>
    <label>Price - NZD</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>