force-app/main/default/objects/airline_upgrade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Airline__c</columns>
    <columns>Deal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CFO</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Head_of_IT</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>